<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name" >

    <PreferenceCategory
        android:key="PrefCategory_ToggleBluetooth"
        android:title="@string/PrefCategory_ToggleBluetooth" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PrefBluetooth_ToggleWhilePhoneOffHook"
            android:summary="@string/PrefDesc_ToggleBtWhilePhoneOffHook"
            android:title="@string/PrefTitle_ToggleBtWhilePhoneOffHook" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PrefBluetooth_ToggleWhilePhoneCharging"
            android:summary="@string/PrefDesc_ToggleBtWhileCharging"
            android:title="@string/PrefTitle_ToggleBtWhileCharging" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/PrefCategory_AboutApp" >
        <Preference
            android:key="PrefAboutApp"
            android:summary="@string/PrefDesc_AboutApp"
            android:title="@string/PrefTitle_AboutApp" />
    </PreferenceCategory>

</PreferenceScreen>